--- a/thesis/macros.tex
+++ b/thesis/macros.tex
@@ -186,6 +186,7 @@
   \gdef\thesection{\@arabic\c@section}}
 \makeatother
 
+\renewcommand{\chapterautorefname}{Chapter}%
 \renewcommand{\sectionautorefname}{Section}%
 \renewcommand{\subsectionautorefname}{Section}%
 \renewcommand{\subsubsectionautorefname}{Section}%
